@@ -208,7 +208,7 @@ int		write_pnm_file(IOSTREAM *fd, XImage *img,
 			       int scale, int fmt, int asascii);
 int		write_jpeg_file(IOSTREAM *fd, XImage *img,
 				Display *disp, Colormap cmap, Image image);
-int		write_gif_file(IOSTREAM *fd, XImage *img,
+int		write_gif_file(IOSTREAM *fd, XImage *img, XImage *msk,
 			       Display *disp, Colormap cmap);
 
 /* xcolour.c */
